--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <div class="project-info-2">
                   <div>
                     <i class="icon-user-1"></i>
-                    <span>FUNiX</span>
+                    <span>FUNiX &nbsp;</span>
                   </div>
                   <div>
                     <i class="icon-lamp"></i>
@@ -394,7 +394,7 @@
                 <div class="project-info-2">
                   <div>
                     <i class="icon-user-1"></i>
-                    <span>FUNiX</span>
+                    <span>FUNiX &nbsp;</span>
                   </div>
                   <div>
                     <i class="icon-lamp"></i>
@@ -446,7 +446,7 @@
                 <div class="project-info-2">
                   <div>
                     <i class="icon-user-1"></i>
-                    <span>FUNiX</span>
+                    <span>FUNiX &nbsp;</span>
                   </div>
                   <div>
                     <i class="icon-lamp"></i>
